# Zen_LLM_Compare

./: .gitignore  CHANGELOG.md  HOW_TO_USE.md  LICENSE  LLM_COMPARE_2026.md  README.md  Run_me.bat  _patch_catalog.py  comparator_backend.py  model_comparator.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: conftest.py  test_bug_fixes.py  test_comparator.html  test_llm_integration.py
